2006-07-31  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Reformat some messages so they fit 80 columns better.

2006-07-28  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (walk_tree_recursive): Walk files first, then
	directories; cuts down memory usage greatly on reiserfs.

2006-07-27  Nathaniel Smith  <njs@pobox.com>

	* configure.ac: Add a check for g++ 4.0/4.0.1 std::tr1 hashtable
	const-correctness bug.
	* hash_map.hh: Check for new #define.

2006-07-27  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (guess_binary): Set did_char_is_binary_init to true
	after initialization.
	(set_char_is_binary): Make un-public.

2006-07-26  Matthew Gregan  <kinetik@orcon.net.nz>

	* std_hooks.lua (temp_file): Allow callers to pass a filename hint
	to be included in the temporary file name.
	(write_to_temporary_file): Pass name hint to temp_file.
	(merge3): Use left/right/ancestor/merged as name hints for
	temporary files.
	(get_netsync_connect_command): Formatting tweak.

2006-07-26  Nathaniel Smith  <njs@pobox.com>

	* platform.hh (inodeprint_calculator): Add an empty virtual
	destructor, as per compiler warning.

2006-07-26  Nathaniel Smith  <njs@pobox.com>

	* roster.cc (dfs_iter): Remove dirname member.

2006-07-26  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A fuzzy to fix.

2006-07-25  Zack Weinberg  <zackw@panix.com>

	* paths.cc: Correct Windows tilde-expansion unit test.

2006-07-25  Nathaniel Smith  <njs@pobox.com>

	* roster.cc (make_roster_for_base_plus_cset): Remove unused
	entry-point.

2005-07-25  Timothy Brownawell  <tbrownaw@gmail.com>

	More cleanups spotten by KingGuppy on IRC:
	* cset.cc (print_cset):
	* merkle_tree.cc (insert_into_merkle_tree): Remove some unused code.
	* refiner.hh: Remove declarations of never-defined functions.
	* paths.cc (test_system_path): Replace a '=' with a '==' in the
	unit tests.

2005-07-25  Timothy Brownawell  <tbrownaw@gmail.com>

	* netcmd.cc (write_delta_cmd): Fix logic for compressing large deltas.
